# nb-dt-training

./: .gitignore  README.md  mnist-basepy.sec  pyproject.toml  task.md
data/mnist/: README.md
results/: evaluation.csv
src/nb_dt_training/: main.py  utils.py
