[project]
name = "nb-dt-training"
version = "0.1.0"
description = "Training Naive Bayes and Decision Tree on MNIST"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn",
    "numpy",
]

[project.scripts]
train = "nb_dt_training.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nb_dt_training"]
